--- a/defiProjectList.json
+++ b/defiProjectList.json
@@ -1,3 +1,11 @@
-[
-    
-]
+{
+    "name": "TJSwap",
+    "logoURI": "https://coin.top/production/upload/logo/sun10.png",
+    "homepage": "http://sun.io/",
+    "MarketCapLink": "https://coinmarketcap.com/currencies/sun-token",
+    "url": "https://apilist.tronscan.org/api/tvl",
+    "category": "DEX",
+    "poolAddresses": [
+        "TLyDufi1SkZZYGbXhfhnzXgc2QU6V76Wpw"
+    ]
+}
