--- a/defiProjectList.json
+++ b/defiProjectList.json
@@ -1,3 +1,75 @@
 [
-    
+   {
+    "name": "JustMoney",
+    "logoURI": "https://res.just.money/assets/img/icons/jm-100x100px.png",
+    "homepage": "https://just.money/",
+    "MarketCapLink": "https://www.coingecko.com/en/coins/justmoney",
+    "url": "https://api.just.money/v1/tvl?totalOnly=1",
+    "category": "DEX",
+    "poolAddresses": [
+        "TFijK2dCUsrXoZM7PYhFqnM9F4Tac8uBJt",
+        "TYA7DfE44XFsZEpBm7M2HAmEgU5kCtDDXg",
+        "TSGv8is6ZMeHRwMQCvq6f16YFTLbw2bpmr",
+        "TTqB2CRJ2PF9qbCRkSVVGsFbx9mZUFNZS3",
+        "TEg25qPxj9zecferiUbf2Senqmbuae7p55",
+        "TGzv3DHcsbxmCNj1Cd1W6P3Ao37fs2mot8",
+        "TWEee7dNN7Zc2M8f13M28KhBGrroVrdGxM",
+        "TTFYn18KrMxpdoQCxsp5SYjmDgS6dDEQTv",
+        "TTHoKhr85UiMPSHmdTukLkv3mAjjSdsiH5",
+        "TVcbypQLttW96yHzBraXBVnhcKC7HDRSfD",
+        "TN4BUph6ubYbmBDy2u9wpqoNg3DR1vrZRN",
+        "TYNTeRHHbqH4sm5GcrwhQqa89ZaBGipEuG",
+        "TBB26dZsWFPDfYNyPWpD8LtdKCCRr3aDbY",
+        "TGMgXjSEzf5h7qK7cMZPuvu4wAk9x21Vwu",
+        "TQy4L8yguUXEsxUZmyrLfADgtwRhL6GgWH",
+        "TJAZ6MvFBUnRw8vVDvgvGRMWGzDVaS6eqr",
+        "TFT7z2ELWzPuUeP8FgPTEAYe7syQ4TTYfo",
+        "TEwbxEXNd3P7fVP6v4W91mRhGCYeGUkEdE",
+        "TVBdRMsCnaNmY7jDVRm6VJxfeZZW3qKWoE",
+        "TNMUT9h6zZDnxouGf1EfXQ4yt1nHhnM4Ae",
+        "TA95HcnsqfzKarHJzfB4V4JvrnZnqnBvWU",
+        "TMz4JoDPUv8rgqUaZCkaSrH7kQ819z2Vd9",
+        "TG2ZRTv3WX9cD53TEcTyjuuHd8pWCAg11X",
+        "TL8wEwke3gGrnw4zEBxisSG2RxehZT7xXs",
+        "TWXEXQyEwSzSBENrWyiGu69Dd3yU8QREHV",
+        "TG1CirSZHqQ3yGJBMfXHjBcWVctfihciQL",
+        "TVzgLYrKSf2ZrPkWP7SbFXk6iKfR7PNHtR",
+        "TDV1P9ZpN3VaE8Rti6PXDZ3gAWUNMbRfa2",
+        "TCqsrTUsBHBFoDRwjvjn6zooj6Cp6e1wUk",
+        "TR7SpMHzp5ZfsBedbXzQ5CJsqBmg8oxzzr",
+        "THTWV7R3U7XQsHWQt8YHgsqirvY9QttB7u",
+        "TNR1gJVMjE47uZxCrQaQe1xat2uBs3jAHr",
+        "TWwbk4ypVR6aKb2CS8TvERg1rxATUfWavP",
+        "TUFeu1WbJwL4jCAyu9pcotuASnbxEUbphn",
+        "TH6yNkvtthsPJLqVE1M8ri7zX9G7pi3fRR",
+        "TAQTQvDWBvHmfjHDn8cPaPUUxqdGQK9UjS",
+        "TJLz2jF3aF6yLL27sdmfjakrcLyY29qfxL",
+        "TA7hPWMWPWoadfFKWpTAdPYVZd3SNdtBDE",
+        "TEApbrCXg4q6ccTvwLRNNh9N1wN4gfxTtd",
+        "TPEZJ7Jm3FqzigM2PZ7tGxg6FMphfwVLn2",
+        "TMS2EaT8oKQcNmrbjArhi1umN1kFStRqrj",
+        "TUetV2cVNwyeG24TKa1Vbdoom5Acu7Vuw2",
+        "TTJVUzQnGcPcgkWHBmBBqGBtdEvaHdmVmG",
+        "TLht8w4xJMBsCn7keucn3PXzFyuGnQdjTS",
+        "TMGpNrSJvFeQSGtoLa3msFtKYmLAs3phAv",
+        "TTjMrfeaSivubKPNGTLJNKLrdffxh1Rq7v",
+        "TUgeA5NHe9i8abXDUGn6YF29cfqNhY1P27",
+        "THUdsicSAL4kqgsf3P6eJazobDXF6aZNaL",
+        "TF9y3CdMWWBqviEQ6W5BEBTRbkATzd4urn",
+        "TSYgoHuM3LWYpjg7DUBx2qihxiqLacSRUo",
+        "TFdqCy5bygZLsUvrsdEfJf62Emb8ADa6p7",
+        "TYWh38woRXocPEhymSUqxMzMGiNNvZ7VFi",
+        "THoz3FEn3aLEF2djJpwzfVYhU2MLELTwJX",
+        "TNN3JABvrkQxuETT7c9eptUgNNMqCYumWH",
+        "TPHPwurLjMuaC2QhcMjVFLSyYRYGuNDzPW",
+        "TLh5zFnnmGiGHWWAexLs54EHpWX9k4jGNv",
+        "TRcCBdK67XbmfJCAHtB8po3HvTWZRX9TVf",
+        "TRveJgoozWhk8kLGWnshCxVPG51E5NdZMW",
+        "TGoxgAPAKhLT6v37Rw9pgGftq7G3ZJ7Erc",
+        "TQfSDhCd7hBfj72Ld5kyKz1vvjnQnBfpK5",
+        "TJZfh6UXUNSpyBxzytktyXiDo4E3LghyGo",
+        "TSx6TR8wr5jhaVpN2eEffyACM5rPCrjB64",
+        "TAPnbhFAd5QWxVphs8mBRHnWT8gaLLtRn3"
+    ]
+} 
 ]
